# mclr

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/deserialize/: assets.rs  json_manifest.rs  json_manifest_version.rs  json_version.rs  mod.rs
src/mc/: mc.rs  mod.rs
src/mc/utils/: assets_utils.rs  command_builder.rs  libs_utils.rs  mod.rs
src/utils/: io_utils.rs  manifest.rs  mod.rs  sync_utils.rs
