[package]
name = "mclr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.201", features = ["derive"] }
bytes = "1.6.0"
reqwest = "0.12.4"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.117"
zip = "1.2.2"
tar = "0.4.40"
flate2 = "1.0.30"
url = "2.5.0"
zip-extract = "0.1.3"
blocking = "1.6.0"
