[package]
name = "mclr"
version = "0.1.0-b"
edition = "2021"
authors = ["k3nder"]
rust-version = "1.71.0"
description = "run mc in rust"
documentation = "https://github.com"
readme = "README.md"
homepage = "https://github.com"
repository = "https://github.com/k3nder/mclr.git"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.201", features = ["derive"] }
bytes = "1.6.0"
reqwest = "0.12.4"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.117"
zip = "1.2.2"
tar = "0.4.40"
flate2 = "1.0.30"
url = "2.5.0"
zip-extract = "0.1.3"
blocking = "1.6.0"
