[package]
name = "mclr"
version = "1.1.0-a"
edition = "2021"
authors = ["k3nder"]
rust-version = "1.71.0"
description = "run mc in rust"
documentation = "https://github.com"
readme = "README.md"
homepage = "https://github.com"
repository = "https://github.com/k3nder/mclr.git"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.201", features = ["derive"] }
bytes = "1.6.0"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.117"
zip = "2.1.0"
tar = "0.4.40"
flate2 = "1.0.30"
url = "2.5.0"
zip-extract = "0.1.3"
blocking = "1.6.0"
sha1 = "0.10"